disable eslint check

--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -16,7 +16,7 @@
     "internetConnectionError": "कृपया आप इंटरनेट कनेक्टिविटी की जाँच करें।"
   },
   "newsList": {
-    "breakingNews": "आज की ताजा खबर",
+    "breakingNews": "ताजा",
     "general": "आम"
   },
   "newsDetail": {
