--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -17,7 +17,7 @@
     "internetConnectionError": "Please check you internet connectivity."
   },
   "newsList": {
-    "breakingNews": "Breaking News",
+    "breakingNews": "Now Playing",
     "general": "general"
   },
   "newsDetail": {
